fix: gh action names

--- a/.github/workflows/credo.yml
+++ b/.github/workflows/credo.yml
@@ -35,5 +35,5 @@ jobs:
       - name: Compile Project
         run: mix compile
 
-      - name: Run Tests
+      - name: Run Credo
         run: mix credo
